Ajout tableau graphique des tournois
Signed-off-by: DarkVador008 <darkvador008@informateque.be>

--- a/test_tournoi.html
+++ b/test_tournoi.html
@@ -1,105 +1,14 @@
-<?php   require "$racine/vue/header.php"; ?>  
+<html>
+<head>
+    <title>Tournoi Rolland Gorras </title>
+    <style>
 
+    </style>
+    <link rel='stylesheet' href='tableau.css'>
+</head>
+<body>
 
-
-
-<style>
-//table, th, td {    border: 1px solid black;}
-
-
-</style>
-
-
-<table class="tb">
-
-  <tr>
-    <th>
-        <div class="btn-group">
-          <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-            First Player
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" role="menu">
-            <li>un joueur</li>
-            <li>un autre</li>
-        </ul>
-    </div></th>
-    <th rowspan="2">img</th>
-    <th>deuxieme tour</th>
-    <th rowspan="2">img</th>
-    <th>demi finale</th>
-    <th>img</th>
-    <th>finaliste</th>
-</tr>
-<tr>
-    <template id="tp">
-        <td>deuxieme</td></template>
-        <td>sd</td>
-        <td></td>
-        <td></td>
-        <td></td>
-
-    </tr>
-    <tr>
-        <td>troisieme</td>
-        <td rowspan = "2">img</td>
-        <td>zzzzs</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>quatrieme</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>cinquieme</td>
-        <td rowspan = "2">img</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>sixxieme</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>septieme</td>
-        <td rowspan = "2">img</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>huitieme</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-</table>
-
-
-
-
-<table border='0' cellspacing='0' width='100%' class="NONE">
+    <table border='0' cellspacing='0' width='100%' >
         <tr>
 
             <td width='25%'class='JH'> <a name='b14'>Joueur 1</a></a></td>
@@ -170,14 +79,5 @@
             <td class='JBS'><a name='b7'>&nbsp;</a></td>
         </tr>
     </table>
-
-
-
-
-
-
-
-
-
-
-<?php   require "$racine/vue/footer.php"; ?>  
+</body>
+</html>
